--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,18 @@
 <resources>
-    <string name="app_name">Popular-Movies</string>
-
+    <string name="app_name">Popular Movies</string>
     <string name="action_sort_by">Sort by</string>
     <string name="action_sort_by_popularity">Most Popular</string>
     <string name="action_sort_by_rating">Highest Rated</string>
     <string name="title_activity_detail">Movie Details</string>
-    <string name="vote_average">Vote Average</string>
+    <string name="rating">Rating</string>
     <string name="release_date">Released</string>
-    <string name="action_settings">Settings</string>
-    <string name="tmdb_api_key">62f2c1614ebfe1947bf81125d768af7d</string>
-
-
+    <string name="details">Details</string>
+    <string name="trailers">Trailers</string>
+    <string name="reviews">Reviews</string>
+    <string name="action_favorite">Favorite</string>
+    <string name="content_authority">com.sohail.popular_movies</string>
+    <string name="removed_from_favorites">Removed from Favorites</string>
+    <string name="added_to_favorites">Added to Favorites</string>
+    <string name="action_sort_by_favorite">Favorites</string>
+    <string name="action_share">Share</string>
 </resources>
